2002-03-13  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWeb_GetVar): Make sure to compare all of
	the variable key.

	* src/mod_rivet.c (Rivet_InitTclStuff): Moved creation of "rivet"
	AssocData here.

2002-03-12  Damon J. Courtney <damon@unreality.com>

	* src/mod_rivet.c
	* src/mod_rivet.h
	* src/rivetParser.c
	* src/rivetCore.c
	* src/TclWebapache.c
	    Cleaned up a lot of memory leaks.  Still working on finding more.

2002-03-12  David N. Welton  <davidw@dedasys.com>

	* tests/makeurl.test: New test.

	* src/TclWebapache.c (TclWeb_MakeURL): Use Tcl_SetStringObj
	instead of creating a new object.

	* src/rivetCore.c (Rivet_MakeURL): Pass already created object to
	TclWeb_MakeURL.

2002-03-11  Damon J. Courtney <damon@unreality.com>

	* src/TclWeb.h
	    Added declaration for TclWeb_GetEnvVar.

	* src/TclWebapache.c
	    Added command TclWeb_GetEnvVar.  Gets a single environment
	    variable.

	* src/mod_rivet.c
	    Added some extra stuff to the default error functions.
	    If the error_script fails, we output the failure.

	* src/rivetCore.c
	    Added Tcl 'env' command to get a single environment variable.

	* src/make.tcl
	* src/buildscripts/aardvark.tcl
	* src/buildscripts/graph.tcl
	    Cleaning up a bug with the struct package.

2002-03-10  Damon J. Courtney <damon@unreality.com>

	* src/mod_rivet.c
	    The Scripts output to the UserConf arrays now properly display
	    the scripts in their entirety.

	    Cleaned up the handling of directory configuration merging.

	    Fixed a bug where Rivet_GetRivetFile was stomping the BeforeScript.

2002-02-23  David N. Welton  <davidw@dedasys.com>

	* tests/upload.test: Added upload test.

	* src/TclWebapache.c: Added functions: TclWeb_PrepareUpload,
	TclWeb_UploadChannel, TclWeb_UploadSave, TclWeb_UploadData,
	TclWeb_UploadSize, TclWeb_UploadType, TclWeb_UploadFilename,
	TclWeb_UploadNames.

	* src/rivetCore.c (Rivet_Upload): Offloaded functionality to
	TclWebApache.c.
